# sultan

./: .gitignore  CMakeLists.txt
csharp_chess/: .gitignore
csharp_chess/chess/: Chess.sln
csharp_chess/chess/Deneme/: Board.cs  Deneme.csproj  PieceSet.cs  Program.cs
csharp_chess/chess/Deneme/Properties/: AssemblyInfo.cs
csharp_chess/code_v1/: Game.cs  Move.cs  MoveGenerator.cs  Utility.cs
csharp_chess/code_v2/: Board.cs  Game.cs  MoveGenerator.cs  PgnRecord.cs  PieceSet.cs  Program.cs  TranspositionTable.cs  Utility.cs  Zobrist.cs  zobrist_keys_1.txt
src/: attack_detector.cpp  board.cpp  definitions.hpp  engine.cpp  engine.hpp  factory.cpp  factory.hpp  fen.cpp  game.hpp  main.cpp  move_generator.cpp  move_generator.hpp  move_selector.cpp  move_selector.hpp  perft.cpp  perft.hpp  piece.hpp  piece_location.cpp  piece_location.hpp  square.cpp  uci_engine.cpp  uci_engine.hpp  uci_game.cpp  uci_game.hpp  utility.cpp
src/test/: fen_tests.cpp  move_tests.cpp  perft_tests.hpp  piece_tests.hpp  test_base.cpp  utility_tests.cpp  utility_tests.hpp
src/test/data/: perft_positions10.epd  perft_positions4.epd  perft_positions6.epd  perft_positions7.epd  perft_positions8.epd
sultan/sultan_v1/: .gitignore  CMakeLists.txt  engine.cpp  fen.cpp
sultan/sultan_v1/board_representation/: board.hpp  move_generator.cpp
sultan/sultan_v1/src/: analyzer.cpp  analyzer.hpp  attack_detector.hpp  board.cpp  board.hpp  definitions.hpp  engine.cpp  engine.hpp  enums.hpp  factory.cpp  fen.cpp  fen.hpp  game.cpp  game.hpp  main.cpp  move.cpp  move.hpp  move_generator.cpp  move_generator.hpp  move_selector.cpp  move_selector.hpp  perft.cpp  perft.hpp  piece.hpp  square.cpp  square.hpp  test.cpp  test.hpp  uci.hpp  utility.cpp  utility.hpp
sultan/sultan_v1/src/board_representation/: board.cpp  board.hpp  move.hpp  move_generator.cpp  move_generator.hpp  square.hpp
sultan/sultan_v1/src/test/: board_tests.cpp  board_tests.hpp  fen_tests.cpp  fen_tests.hpp  move_generator_tests.cpp  move_generator_tests.hpp  move_tests.cpp  move_tests.hpp  perft_tests.cpp  perft_tests.hpp  piece_tests.cpp  test_base.hpp  utility_tests.cpp
sultan/sultan_v1/src/test/data/: perft_positions1.epd  perft_positions11.epd  perft_positions12.epd  perft_positions2.epd  perft_positions2.txt  perft_positions3.epd  perft_positions5.epd  perft_positions9.epd
sultan/trials/design_parts/: CMakeLists.txt  fen.hpp  main.cpp  move.hpp  piece.hpp  test.cpp  test.hpp  uci.cpp  uci.hpp  utility.cpp  utility.hpp
sultan/trials/design_parts/board_representation/: square.cpp  square.hpp
sultan/trials/engine_gui_communication/uci/: CMakeLists.txt  main.cpp
sultan/trials/move_generator/: Board.cpp  Board.hpp  CMakeLists.txt  Definitions.cpp  Definitions.hpp  Move.cpp  Move.hpp  main.cpp
sultan/trials/pre-sultan/: CMakeLists.txt  main.cpp
sultan/trials/pre-sultan/src/: color_traits.hpp  move.cpp  move.hpp  piece_traits.hpp  pieces.cpp  pieces.hpp  utility_functions.cpp  utility_functions.hpp  x88_board.cpp  x88_board.hpp  x88_fen.cpp  x88_fen.hpp
